--- a/lengends/events/templates/register_event.html
+++ b/lengends/events/templates/register_event.html
@@ -7,11 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Correct Bootstrap 4.5.2 CDN link -->
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-    <title>Event Registration</title>
+    <title>Lengendary Table</title>
 </head>
 <body>
     <div class="container my-4">
-        <h1 class="mb-4 text-center">Event Registration</h1>
+        <h1 class="mb-4 text-center">Lengendary Table</h1>
         <div class="form-container">
             <form action="" method="post">
                 {% csrf_token %}
