--- a/lengends/events/templates/thank_you.html
+++ b/lengends/events/templates/thank_you.html
@@ -11,7 +11,9 @@
 </head>
 <body>
     <h1>Thank you for registering!</h1>
-    <p>Your registration was successful. We will send you a confirmation email shortly ....</p>
-    <P>Incase of delay contact us : 0757238326</P>
+    <p>Your registration was successful.<br>
+        You will receive a payment prompt shortly <br>
+        You will receive  a confirmation email shortly after payment .... 😊 ....</p>
+    <P>Incase of a  delay contact us 📱 💬 : 0757238326</P>
 </body>
 </html>
