--- a/lengends/events/templates/thank_you.html
+++ b/lengends/events/templates/thank_you.html
@@ -13,7 +13,7 @@
     <h1>Thank you for registering!</h1>
     <p>Your registration was successful.<br>
         You will receive a payment prompt shortly <br>
-        You will receive  a confirmation email shortly after payment .... 😊 ....</p>
+        We will send a confirmation email shortly after payment .... 😊 ....</p>
     <P>Incase of a  delay contact us 📱 💬 : 0757238326</P>
 </body>
 </html>
